<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">
    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_first_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_url"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_phone"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_email"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_text_pas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_pas"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/view_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dept"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>
        <Spinner
            android:id="@+id/edit_text_dept"
            android:entries="@array/contact_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_add_update_employee"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_employee"
        android:layout_gravity="center"/>
</LinearLayout>